# google-agent-sdk

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: groundedness-gate.yml
data/evals/: eval_cases.json
data/samples/structured/: customers.csv  support_tickets.csv
data/samples/unstructured/: knowledge_base.txt  product_policy.md
docs/: architecture.md
scripts/: evaluate_groundedness.py  ingest.py
src/enterprise_rag/: __init__.py  app.py  config.py  evals.py  models.py  service.py  skills_registry.py  tracing.py  ui.py
src/enterprise_rag/adk_agent/: agent.py
src/enterprise_rag/connectors/: bigquery_loader.py  structured_loader.py  unstructured_loader.py
src/enterprise_rag/ingestion/: pipeline.py
src/enterprise_rag/retrieval/: hybrid_retriever.py  vector_store.py  vertex_reranker.py
